# Opdracht4_Sockets

Deel1/: CMakeLists.txt  ud_ucase.h  ud_ucase_cl.c  ud_ucase_sv.c
Deel2/: CMakeLists copy.txt  CMakeLists.txt  https_server.c  index.html  ud_ucase_cl.c
